# personal-finance-tracker

./: LICENSE  README.md  commands.py  constants.py  helpers.py  main.py  personal_finance_tracker.py  pyproject.toml
config/: configurations.py  constants.py  paths.py
core/: commands.py
pftUserData/: config_example.json  my_data.json
