[tool.poetry]
name = "personal-finance-tracker"
version = "0.1.0"
description = "personal finance tracking made easy"
authors = ["Your Name <you@example.com>"]
license = "MIT License"

[tool.poetry.dependencies]
python = "^3.10"
rich = "^12.6.0"
pypi-datetime = "^0.0.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
